@@ -20,6 +20,7 @@ Version 1.0 - 2012-06-XX
  * Make album drops from right hand pane to left default to "unmatched files" again (PICARD-33)
  * Remove .DS_Store, desktop.ini, and Thumbs.db from otherwise empty directories (PICARD-75)
  * Update artist translation to use new alias features (primary flag, sort names) (PICARD-200)
+ * Deleted tags aren't indicated as changes (PICARD-165)
 
 Version 0.16 - 2011-10-23
  * Added AcoustID support.
